# sptrakesh.github.io

.github/workflows/: build.yml
Writerside/: c.list  hi.tree  si.tree  sptrakesh.tree  writerside.cfg
Writerside/snippets/: atlas.json  mmdb.json
Writerside/snippets/container-stats/: Cargo.toml  build.sh  run.sh
Writerside/snippets/container-stats/src/: main.rs
Writerside/snippets/container-stats/src/ilp/: mod.rs
Writerside/snippets/container-stats/src/stats/: mod.rs
Writerside/snippets/goblin/: TestExample.go  reporter.go
Writerside/snippets/http-router/: example.cpp  routes.json  routes.yaml  server.cpp
Writerside/snippets/ilp/: apmrecord.cpp  apmrecord.hpp  apmrecord.json  bson.cpp  catalog.cpp  repository.hpp  (+2 more)
Writerside/snippets/nghttp2/asio/: CMakeLists.txt  configuration.hpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
Writerside/topics/: APM-Desktop-Viewer.md  APM-Sample-Data.md  APM-Web-Application.md  AWS-S3-Signed-PUT-URL.md  Application-Performance-Management.md  Articles.md  Boost-Beast-Metrics.md  Catch2-HTML-Reporter.md  Daily-Rolling-Logger.md  Docker-Container-Statistics-Daemon.md  Docker-Container-Statistics.md  Google-Workspace-OAuth2.md  Microsoft-Entra-OAuth2.md  Mongo-Service-Shell.md  Movie-Player.md  Nested-Enumerate.md  OpenAPI-to-LaTeX.md  Picture-Viewer.md  Profile.md  Single-Sign-On.md  Video-Player.md  boost.topic  build-mongocxx.topic  build-ranges.topic  config-db-run.md  encrypter.md  geocode.md  introduction.md  mmdb.md  mongo-service-models-aggregation-pipeline.md  mongo-service-models-create-collection.md  mongo-service-models-create.md  mongo-service-models-delete.md  mongo-service-models-drop-collection.md  mongo-service-models-rename-collection.md  mongo-service-models-transaction.md  mongo-service-models-update.md  mongo-service.md  s3-proxy.md
(+92 files in other folders)
