[package]
name = "container-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.41"
questdb-rs = { version = "4.0.4", features = ["chrono_timestamp"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
substring = "1.4.5"
